# HPC_CPP

./: CMakeLists.txt  README.md
CUDA/: blog.md
JAX/pytree/: 01-basics.ipynb
Kokkos/: CMakeLists.txt
Kokkos/01-Begin/: 01-exercise-1-skel.cpp  02-exercise-2-skel.cpp  CMakeLists.txt
Kokkos/01-Begin/Exercise/: 01-exercise-1.cpp  02-exercise-2.cpp
Kokkos/GPU/: CMakeLists.txt
Kokkos/MPI/: CMakeLists.txt
TVM/MLC/: 00-张量程序抽象.ipynb  01-端到端模型执行.ipynb  02-自动程序优化.ipynb  02-自动程序优化2.ipynb  03-GPU加速.ipynb  03-与机器学习框架的整合.ipynb  03-与机器学习框架的整合2.ipynb  04-GPU加速.ipynb  README.md
cotengra/: 01-begin-torch.ipynb  01-begin.ipynb  02-basics.ipynb  03-backend.ipynb
libsimdpp/: 01-start.cpp  Makefile
torch/: 01-jit_script.ipynb  02-autogradqs_tutorial.ipynb  03-Intro_to_TorchScript_tutorial.ipynb
torch/cpp/00-load-module/: 00-get_script.ipynb  example-app.cpp
torch/triton/: 01-vector-add.ipynb  02-fused-softmax.ipynb  03-matrix-multiplication.ipynb  04-low-memory-dropout.ipynb  05-layer-norm.ipynb  06-fused-attention.ipynb  07-extern-functions.ipynb  08-grouped-gemm.ipynb  09-persistent-matmul.ipynb  README.md  fused-attention-batch4-head32-d64-bwd-causal=True.csv  fused-attention-batch4-head32-d64-fwd-causal=False.csv  fused-attention-batch4-head32-d64-fwd-causal=True.csv  layer-norm-backward.csv
torch/triton/MoreTutorial/: 00-tutorial01.ipynb  README.md
